# fast_morphology

./: .gitignore  Cargo.toml  README.md
.cargo/: Cargo.toml  cargo.toml
.github/workflows/: build_push.yml
app/: Cargo.toml
app/benches/dilation/: main.rs
app/src/: main.rs
src/: arena.rs  arena_roi.rs  border_mode.rs  difference.rs  dynamic_image.rs  filter.rs  filter_op_declare.rs  filter_rgb.rs  filter_rgba.rs  flat_se.rs  img_size.rs  lib.rs  morph_base.rs  morph_gray_alpha.rs  morph_rgb.rs  morph_rgba.rs  op.rs  op_f32.rs  op_impl.rs  op_rgb_impl.rs  op_rgba_impl.rs  op_type.rs  op_u16.rs  se_scan.rs  thread_policy.rs  unsafe_slice.rs
src/avx/: gradient_unsigned_8.rs  mod.rs
src/neon/: gradient_unsigned_8.rs  mod.rs
src/ops/: mod.rs  morph_row_op.rs  morph_row_rgb_op.rs  morph_row_rgba_op.rs  morph_rows_4_op.rs  morph_rows_rgb_4_op.rs  morph_rows_rgba_4_op.rs  op.rs  smart_allocator.rs  utils.rs
src/ops/avx/: mod.rs  morph_op.rs  morph_op_f32.rs  morph_op_u16.rs  op_1d.rs  op_3d.rs  op_4d.rs  v_load.rs
src/ops/neon/: mod.rs  morph_op.rs  morph_op_4_rows.rs  morph_op_f32.rs  morph_op_u16.rs  morph_rgb.rs  morph_rgb_4_rows.rs  morph_rgba.rs  morph_rgba_4_rows.rs  op.rs  utils.rs
src/ops/sse/: hminmax.rs  mod.rs  morph_op.rs  morph_op_4_rows.rs  morph_op_f32.rs  morph_op_u16.rs  morph_rgb.rs  morph_rgb_4_rows.rs  morph_rgba.rs  morph_rgba_4_rows.rs  op.rs  v_load.rs
src/packing/: mod.rs  pack_gray_alpha.rs  pack_rgb.rs  pack_rgba.rs  traits.rs  unpack_gray_alpha.rs  unpack_rgb.rs  unpack_rgba.rs  unpacked_gray_alpha.rs  unpacked_rgb_image.rs  unpacked_rgba_image.rs
src/packing/avx/: deinterleave_rgb.rs  deinterleave_rgba.rs  mod.rs  v_load.rs
src/packing/neon/: deinterleave_rgb.rs  deinterleave_rgba.rs  mod.rs  pack_rgb.rs  pack_rgba.rs
src/packing/sse/: deinterleave_rgb.rs  deinterleave_rgba.rs  mod.rs  pack_rgb.rs  pack_rgba.rs  v_load.rs  v_store.rs
src/sse/: gradient_unsigned_8.rs  mod.rs
