workspace = { members = ["app"] }

[package]
name = "fast_morphology"
version = "0.1.5"
edition = "2021"
description = "Fast morphological operations for images"
readme = "README.md"
keywords = ["morph", "morphology", "dilate", "erode"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/fast_morphology.git"
categories = ["multimedia::images"]
homepage = "https://github.com/awxkee/fast_morphology.git"
repository = "https://github.com/awxkee/fast_morphology.git"
exclude = ["*.jpg", "*.png"]

[dependencies]
num-traits = "0.2.19"
rayon = "1.10.0"
image = { version = "0.25.0", optional = true, default-features = false }

[features]
default = []
image = ["dep:image"]